--- a/post-service/src/main/resources/application.properties
+++ b/post-service/src/main/resources/application.properties
@@ -15,7 +15,7 @@ management.tracing.sampling.probability=1.0
 ################ Database #####################
 #spring.datasource.url=jdbc:h2:mem:test_db;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:15432/postgres}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:15432/posts}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
 
