--- a/vote-service/src/main/resources/application.properties
+++ b/vote-service/src/main/resources/application.properties
@@ -12,7 +12,7 @@ management.metrics.tags.application=${spring.application.name}
 ################ Database #####################
 #spring.datasource.url=jdbc:h2:mem:test_db;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:25432/postgres}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:15432/votes}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
 
