--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,24 +1,20 @@
 version: '3.8'
 services:
 
-  posts-db:
+  techbuzz-db:
     image: postgres:15.1-alpine
-    container_name: posts-db
+    container_name: techbuzz-db
     environment:
+      - POSTGRES_MULTIPLE_DATABASES=posts,votes
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=postgres
+    volumes:
+      - ./create-schemas.sh:/docker-entrypoint-initdb.d/create-schemas.sh
     ports:
       - "15432:5432"
-    restart: unless-stopped
-
-  votes-db:
-    image: postgres:15.1-alpine
-    container_name: votes-db
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=postgres
-    ports:
-      - "25432:5432"
-    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
