--- a/post-service/pom.xml
+++ b/post-service/pom.xml
@@ -21,6 +21,9 @@
 		<jquery.version>3.6.1</jquery.version>
 		<vue.version>2.6.14</vue.version>
 		<fontawesome.version>6.2.0</fontawesome.version>
+		<jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
+		<dockerUserName>sivaprasadreddy</dockerUserName>
+		<dockerImageName>${dockerUserName}/techbuzz-${project.artifactId}</dockerImageName>
 	</properties>
 	<dependencies>
 
@@ -181,6 +184,27 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>${jib-maven-plugin.version}</version>
+				<configuration>
+					<from>
+						<image>eclipse-temurin:19-jre-focal</image>
+					</from>
+					<to>
+						<image>${dockerImageName}</image>
+						<tags>
+							<tag>latest</tag>
+						</tags>
+					</to>
+					<container>
+						<ports>
+							<port>8080</port>
+						</ports>
+					</container>
 				</configuration>
 			</plugin>
 		</plugins>
