--- a/vote-service/src/main/resources/application.properties
+++ b/vote-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=vote-service
 server.port=8082
 
+#logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=TRACE
 #logging.file.name=logs/vote-service.log
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
