--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,10 @@
 	https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sivalabs.techbuzz</groupId>
-	<artifactId>techbuzz-microservices</artifactId>
+	<artifactId>spring-boot-3-observability-grafana-stack</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>techbuzz-microservices</name>
-	<description>TechBuzz</description>
+	<name>spring-boot-3-observability-grafana-stack</name>
 
 	<modules>
 		<module>vote-service</module>
